fixed background color not showing for entire page bug

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,4 @@
 main {
-    background-color: rgb(241, 252, 255);
     font-family: Verdana, Geneva, Tahoma, sans-serif
 }
 
