--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,7 @@ body {
   margin: 0px;
   padding: 0px;
   overflow-x: hidden; 
+  background-color: rgb(241, 252, 255);
 }
 
 code {
